// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sheet snapshots > matches snapshot: Default 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors outline-none disabled:pointer-events-none disabled:opacity-50 focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4"
    data-base-ui-click-trigger=""
    id="base-ui-_r_1_"
    tabindex="0"
    type="button"
  >
    Edit profile
  </button>
</div>
`;

exports[`Sheet snapshots > matches snapshot: Left 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors outline-none disabled:pointer-events-none disabled:opacity-50 focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4"
    data-base-ui-click-trigger=""
    id="base-ui-_r_3_"
    tabindex="0"
    type="button"
  >
    Open left
  </button>
</div>
`;
